--- a/index.html
+++ b/index.html
@@ -533,8 +533,8 @@
             </ul>
           </div>
           <div class="form-footer">
-            <h2 class="social-footer-title">Підпишіться на розсилку</h2>
-            <form action="/">
+            <p class="social-footer-title">Підпишіться на розсилку</p>
+            <form class="form-footer-mein">
               <input
                 type="email"
                 class="form-mail"
@@ -557,16 +557,16 @@
     <!-- Модальне вікно -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <span class="button-modal" data-modal-close>
+        <button class="button-modal" data-modal-close>
           <svg class="close-icon">
             <use href="./images/sprite.svg#icon-close1"></use>
           </svg>
-        </span>
+        </button>
         <!-- Форма -->
-        <h2 class="main-form">Залиште свої дані, ми вам передзвонимо</h2>
+        <p class="main-form">Залиште свої дані, ми вам передзвонимо</p>
         <form class="form-modal">
           <div class="form-feild">
-            <input
+            <input 
               type="text"
               class="form-input"
               name="name"
@@ -574,7 +574,6 @@
               autofocus
             />
             <label for="name" class="form-label">Ім'я</label>
-            <span class="form-icon">
               <svg class="icon">
                 <use href="./images/sprite.svg#icon-person"></use></svg></span>
           </div>
@@ -582,7 +581,6 @@
           <div class="form-feild">
             <input type="tel" class="form-input" name="tel" id="tel" />
             <label for="tel" class="form-label">Телефон</label>
-            <span class="form-icon">
               <svg class="icon">
                 <use href="./images/sprite.svg#icon-phone"></use></svg></span>
           </div>
@@ -590,7 +588,6 @@
           <div class="form-feild">
             <input type="email" class="form-input" name="mail" id="mail" />
             <label for="mail" class="form-label">Пошта</label>
-            <span class="form-icon">
               <svg class="icon">
                 <use href="./images/sprite.svg#icon-email"></use></svg></span>
           </div>
