--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <div class="page-team-div">
                 <h3 class="title">Ігор Дем'яненко</h3>
                 <p lang="en" class="text">Product Designer</p>
-                <!-- Іконки соціальних мереж -->
+                <!-- Іконки соц мереж -->
                 <ul class="social">
                   <li class="social-list">
                     <a
