--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
-    <!-- Шапка сайту-->
+    <!-- Шапка сайт-->
     <header class="page-header">
       <div class="container main-nav">
         <a class="logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
